<resources>
  <string name="app_name">Elbilad</string>

  <string name="splash_screen_text">أخبار الجزائر والعالم على مدار الساعة</string>
  <string name="splash_screen_made_in">MADE IN KREO AGENCY</string>
  <string name="action_menu">Menu</string>
  <string name="okay">OK</string>
  <string name="error_message_network_connection_missing">Check internet connection, please</string>
  <string name="error_data_loading">Data loading error</string>
  <string name="error_server_forbidden">Server forbidden error</string>
  <string name="home">الرئيسية</string>
  <string name="last_news">آخر الأخبار</string>
  <string name="bookmarks">المفضلات</string>
  <string name="videos">الفيديو</string>
  <string name="photos">الصور</string>
  <string name="settings">خيارات</string>
  <string name="about">الاعدادت</string>
  <string name="preferences">الخصوصية</string>
  <string name="date">%1$s | %2$s</string>
  <string name="news_title_international">الدولي</string>
  <string name="news_title_sport">الرياضي</string>
  <string name="news_title_music">منوعات</string>
  <string name="news_title_mahakim">محاكم</string>
  <string name="news_title_culture">الثقافي</string>
  <string name="news_title_rasid">الراصد</string>
  <string name="added_to_bookmarks">Added to bookmarks</string>
  <string name="journal_title">النسخة الورقية</string>
  <string name="journal_number">№ %1$s %2$s</string>
  <string name="news_most_read">الأكثر قراءة</string>

  <string name="authority">com.elbilad.authority</string>
  <string name="accountType">elbilad.com</string>

  <!-- Settings -->
  <string name="settings_offline_mode">Offline mode</string>
  <string name="settings_offline_mode_summary">Enable/disable updating posts in background to access them without network</string>
  <string name="settings_updating_offline_mode_time">Updating time</string>
  <string-array name="settings_update_time">
    <item>1 hour</item>
    <item>3 hours</item>
    <item>6 hours</item>
    <item>12 hours</item>
  </string-array>
  <string-array name="settings_update_time_values">
    <item>1</item>
    <item>3</item>
    <item>6</item>
    <item>12</item>
  </string-array>
  <string name="settings_push_notification">Push notifications</string>
  <string name="settings_push_notification_summary">Enable/disable push notifications</string>
  
  
  <!-- GOOGLE ADS IDs-->
  <string name="ads_app_id">ca-app-pub-2879265761807915~7543630180</string>

  <string name="main_screen_top_banner_id">ca-app-pub-2879265761807915/5648094588</string>
  <string name="main_screen_middle_banner_id">ca-app-pub-2879265761807915/2415426582</string>
  <string name="main_screen_middle_2_banner_id">ca-app-pub-2879265761807915/5648094588</string>
  <string name="main_screen_middle_3_banner_id">ca-app-pub-2879265761807915/2415426582</string>
  <string name="main_screen_bottom_banner_id">ca-app-pub-2879265761807915/5648094588</string>

  <string name="category_screen_top_banner_id">ca-app-pub-2879265761807915/5648094588</string>
  <string name="category_screen_bottom_banner_id">ca-app-pub-2879265761807915/2415426582</string>

  <string name="flash_news_screen_top_banner_id">ca-app-pub-2879265761807915/5648094588</string>
  <string name="flash_news_screen_bottom_banner_id">ca-app-pub-2879265761807915/2415426582</string>

  <string name="bookmarks_screen_top_banner_id">ca-app-pub-2879265761807915/5648094588</string>
  <string name="bookmarks_screen_bottom_banner_id">ca-app-pub-2879265761807915/2415426582</string>

  <string name="photo_screen_top_banner_id">ca-app-pub-2879265761807915/5648094588</string>
  <string name="photo_screen_bottom_banner_id">ca-app-pub-2879265761807915/2415426582</string>

  <string name="video_screen_top_banner_id">ca-app-pub-2879265761807915/5648094588</string>
  <string name="video_screen_bottom_banner_id">ca-app-pub-2879265761807915/2415426582</string>

  <string name="most_read_screen_top_banner_id">ca-app-pub-2879265761807915/5648094588</string>
  <string name="most_read_screen_bottom_banner_id">ca-app-pub-2879265761807915/2415426582</string>

  <string name="details_screen_top_banner_id">ca-app-pub-2879265761807915/2415426582</string>
  <string name="details_screen_middle_banner_id">ca-app-pub-2879265761807915/5648094588</string>
  <string name="details_screen_bottom_banner_id">ca-app-pub-2879265761807915/2415426582</string>
  <string name="placeholder_favourites">لا توجد بيانات لعرض</string>
</resources>
