<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <android.support.v7.preference.SwitchPreferenceCompat
      android:key="offline_mode"
      android:summary="@string/settings_offline_mode_summary"
      android:title="@string/settings_offline_mode"
      android:defaultValue="true"
      >
  </android.support.v7.preference.SwitchPreferenceCompat>
  <android.support.v7.preference.ListPreference
      android:dependency="offline_mode"
      android:entries="@array/settings_update_time"
      android:entryValues="@array/settings_update_time_values"
      android:key="offline_update_list"
      android:title="@string/settings_updating_offline_mode_time"
      android:defaultValue="6"
      >Å
  </android.support.v7.preference.ListPreference>
  <android.support.v7.preference.SwitchPreferenceCompat
      android:key="push_notifications"
      android:summary="@string/settings_push_notification_summary"
      android:title="@string/settings_push_notification"
      >
  </android.support.v7.preference.SwitchPreferenceCompat>
</android.support.v7.preference.PreferenceScreen>